--- a/package.json
+++ b/package.json
@@ -16,20 +16,18 @@
         "babel-loader": "^8.0.6",
         "browser-sync-client": "^2.26.6",
         "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^5.1.2",
         "cross-env": "~5.2",
         "css-loader": "^3.0.0",
         "cssnano": "~4.1",
         "html-webpack-plugin": "^3.2.0",
         "optimize-css-assets-webpack-plugin": "~5.0",
         "style-loader": "^0.23.1",
-        "uglifyjs-webpack-plugin": "~2.0",
+        "terser-webpack-plugin": "^4.2.3",
         "webpack": "^4.34.0",
         "webpack-bundle-analyzer": "^3.3.2",
         "webpack-cli": "^3.3.4",
         "webpack-dev-server": "^3.7.1",
         "webpack-merge": "~4.2"
-    },
-    "dependencies": {
-        "d3": "^5.9.2"
     }
 }
